--- a/style.css
+++ b/style.css
@@ -42,7 +42,19 @@ body{
 .login img{
     width: 65px;
     height: auto;
+    animation: float 5s ease-in-out infinite;
+
 }
+@keyframes float{
+    0%, 100%{
+        transform: translateY(0);
+     }
+      50%{
+        transform: translateY(-25px);
+      }
+    }
+
+
 .input::placeholder{
     color: #CBD0F7;
     font-size: 14px;
