--- a/style.css
+++ b/style.css
@@ -22,11 +22,14 @@ body{
     width: 355px;
     height: 320px;
     padding: 35px;
+    box-shadow: 0px 10px 40px #00000056;
 }
 .login form{
     display: flex;
     width: 100%;
     flex-direction: column;
+    
+    
 
 }
 .login input{
@@ -43,6 +46,7 @@ body{
     width: 65px;
     height: auto;
     animation: float 5s ease-in-out infinite;
+    
 }
 
 @keyframes float{
@@ -66,6 +70,7 @@ form [type="submit"]{
      text-transform: uppercase;
      font-weight: bold;
      cursor: pointer;
+     box-shadow: 0px 10px 40px #00000056;
 }
 p{
     color: #CBD0F7
@@ -73,5 +78,5 @@ p{
 
 a{
     color:#5568fe;
-    text-decoration: none;
+    text-decoration: none;  
 }
